--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,15 @@
 [tox]
+requires = tox-venv
 minversion = 3.8.0
 envlist = py36, py37, py38, py39, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
-    3.6: py36, mypy, flake8
-    3.7: py37
-    3.8: py38
-    3.9: py39
+    3.6: python3.6, mypy, flake8
+    3.7: python3.7
+    3.8: python3.8
+    3.9: python3.9
 
 [testenv]
 setenv =
